--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -82,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "conn=\"postgresql://postgres:openpgpwd@localhost:5432/RetailDB\"\n",
-    "query='''SELECT * FROM sale_order_line LIMIT 5;'''\n",
+    "query='''SELECT * FROM sale_order_line ;'''\n",
     "df=pd.read_sql(query,conn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +155,13 @@
        "      <td>1</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>False</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
@@ -179,13 +179,13 @@
        "      <td>1</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>False</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
@@ -203,13 +203,13 @@
        "      <td>1</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>False</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
@@ -227,13 +227,13 @@
        "      <td>4</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>False</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
@@ -251,62 +251,236 @@
        "      <td>4</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>95</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>4</td>\n",
        "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>96</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>93</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>90</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>87</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>105</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 56 columns</p>\n",
+       "<p>105 rows × 56 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  order_id  sequence  company_id  currency_id  order_partner_id  \\\n",
-       "0   1         1        10           1            1                11   \n",
-       "1   2         1        10           1            1                11   \n",
-       "2   3         1        10           1            1                11   \n",
-       "3   4         2        10           1            1                13   \n",
-       "4   5         2        10           1            1                13   \n",
+       "      id  order_id  sequence  company_id  currency_id  order_partner_id  \\\n",
+       "0      1         1        10           1            1                11   \n",
+       "1      2         1        10           1            1                11   \n",
+       "2      3         1        10           1            1                11   \n",
+       "3      4         2        10           1            1                13   \n",
+       "4      5         2        10           1            1                13   \n",
+       "..   ...       ...       ...         ...          ...               ...   \n",
+       "100   95        54         2           1            2                11   \n",
+       "101   96        54         2           1            2                11   \n",
+       "102   93        54         2           1            2                11   \n",
+       "103   90        54         1           1            2                11   \n",
+       "104  105        55         4           1            2                13   \n",
        "\n",
-       "   salesman_id  product_id  product_uom product_packaging_id  ...  \\\n",
-       "0            6          42            1                 None  ...   \n",
-       "1            6          17            1                 None  ...   \n",
-       "2            6          16            1                 None  ...   \n",
-       "3            2          14            4                 None  ...   \n",
-       "4            2          15            4                 None  ...   \n",
+       "     salesman_id  product_id  product_uom product_packaging_id  ...  \\\n",
+       "0              6          42            1                 None  ...   \n",
+       "1              6          17            1                 None  ...   \n",
+       "2              6          16            1                 None  ...   \n",
+       "3              2          14            4                 None  ...   \n",
+       "4              2          15            4                 None  ...   \n",
+       "..           ...         ...          ...                  ...  ...   \n",
+       "100            2          89            4                 None  ...   \n",
+       "101            2          89            4                 None  ...   \n",
+       "102            2          88            4                 None  ...   \n",
+       "103            2          87            4                 None  ...   \n",
+       "104            2          90            1                 None  ...   \n",
        "\n",
-       "   reservation_begin  start_date is_rental return_date qty_returned  \\\n",
-       "0               None        None     False        None          0.0   \n",
-       "1               None        None     False        None          0.0   \n",
-       "2               None        None     False        None          0.0   \n",
-       "3               None        None     False        None          0.0   \n",
-       "4               None        None     False        None          0.0   \n",
+       "     reservation_begin  start_date is_rental return_date qty_returned  \\\n",
+       "0                  NaT         NaT     False         NaT          0.0   \n",
+       "1                  NaT         NaT     False         NaT          0.0   \n",
+       "2                  NaT         NaT     False         NaT          0.0   \n",
+       "3                  NaT         NaT     False         NaT          0.0   \n",
+       "4                  NaT         NaT     False         NaT          0.0   \n",
+       "..                 ...         ...       ...         ...          ...   \n",
+       "100                NaT         NaT     False         NaT          0.0   \n",
+       "101                NaT         NaT     False         NaT          0.0   \n",
+       "102                NaT         NaT     False         NaT          0.0   \n",
+       "103                NaT         NaT     False         NaT          0.0   \n",
+       "104                NaT         NaT     False         NaT          0.0   \n",
        "\n",
-       "  parent_line_id pricing_id has_displayed_warning_upsell  remaining_hours  \\\n",
-       "0           None       None                         None              0.0   \n",
-       "1           None       None                         None              0.0   \n",
-       "2           None       None                         None              0.0   \n",
-       "3           None       None                         None              0.0   \n",
-       "4           None       None                         None              0.0   \n",
+       "    parent_line_id pricing_id has_displayed_warning_upsell  remaining_hours  \\\n",
+       "0             None        NaN                         None              0.0   \n",
+       "1             None        NaN                         None              0.0   \n",
+       "2             None        NaN                         None              0.0   \n",
+       "3             None        NaN                         None              0.0   \n",
+       "4             None        NaN                         None              0.0   \n",
+       "..             ...        ...                          ...              ...   \n",
+       "100           None        NaN                         None              0.0   \n",
+       "101           None        NaN                         None              0.0   \n",
+       "102           None        NaN                         None              0.0   \n",
+       "103           None        NaN                         True            -10.0   \n",
+       "104           None        NaN                         None              0.0   \n",
        "\n",
-       "   fsm_lot_id  \n",
-       "0        None  \n",
-       "1        None  \n",
-       "2        None  \n",
-       "3        None  \n",
-       "4        None  \n",
+       "     fsm_lot_id  \n",
+       "0          None  \n",
+       "1          None  \n",
+       "2          None  \n",
+       "3          None  \n",
+       "4          None  \n",
+       "..          ...  \n",
+       "100        None  \n",
+       "101        None  \n",
+       "102        None  \n",
+       "103        None  \n",
+       "104        None  \n",
        "\n",
-       "[5 rows x 56 columns]"
+       "[105 rows x 56 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,23 +646,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "105"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#insert into\n",
-    "df.to_sql('sale_order_line',connMysql)"
+    "df.to_sql('sale_order_line',connMysql,if_exists='replace')"
    ]
   }
  ],
