insert into from Potstgres to Myqsql

--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -661,7 +661,7 @@
     }
    ],
    "source": [
-    "#insert into\n",
+    "#insert into from Potstgres to Myqsql\n",
     "df.to_sql('sale_order_line',connMysql,if_exists='replace')"
    ]
   }
