--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -72,7 +72,6 @@
    "outputs": [],
    "source": [
     "\"\"\" from sqlalchemy import text\n",
-    "\n",
     "con=alchemyEngine.connect()\n",
     "query = \"SELECT * FROM sale_order_line LIMIT 100;\"\n",
     "result =con.execute(text(query))\n",
@@ -646,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -655,14 +654,14 @@
        "105"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#insert into from Potstgres to Myqsql\n",
-    "df.to_sql('sale_order_line',connMysql,if_exists='replace')"
+    "df.to_sql('sale_order_line',connMysql,if_exists='replace',index=False)"
    ]
   }
  ],
