--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -663,6 +663,40 @@
     "#insert into from Potstgres to Myqsql\n",
     "df.to_sql('sale_order_line',connMysql,if_exists='replace',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql  \n",
+    "select * from sale_order_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost/mydbtest\n",
+      "   postgresql://postgres:***@localhost:5432/RetailDB\n",
+      "105 rows affected.\n",
+      "(MySQLdb.ProgrammingError) (1064, \"You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'result.csv('C:\\\\Users\\\\Tech Shop\\\\Desktop\\\\DataEngineer\\\\m.csv')' at line 1\")\n",
+      "[SQL: result.csv('C:\\Users\\Tech Shop\\Desktop\\DataEngineer\\m.csv')]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql  result << select * from sale_order_line;\n",
+    "\n",
+    "result.csv('C:\\Users\\Tech Shop\\Desktop\\DataEngineer\\m.csv')"
+   ]
   }
  ],
  "metadata": {
