--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,7 @@
     "        group by order_id\n",
     "        order by sum(price_total)  desc\n",
     "        ;'''\n",
-    "df=ps.read_sql(query,dbConnection)\n",
-    "df"
+    "df=ps.read_sql(query,dbConnection)\n"
    ]
   },
   {
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,25 +78,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    order_id  price_total\n",
+      "0         55     74458.18\n",
+      "1         54     28088.23\n",
+      "2         44     17550.00\n",
+      "3         46     12250.00\n",
+      "4         56      9555.65\n",
+      "5         45      7752.00\n",
+      "6         23      4350.00\n",
+      "7         41      3645.00\n",
+      "8         38      3598.00\n",
+      "9          2      2947.50\n",
+      "10        20      2947.50\n",
+      "11         4      2240.00\n",
+      "12        21      2175.00\n",
+      "13        47      2075.00\n",
+      "14        52      2064.00\n",
+      "15        24      1990.00\n",
+      "16        36      1799.00\n",
+      "17        32      1799.00\n",
+      "18        19      1740.00\n",
+      "19         1      1740.00\n",
+      "20         7      1706.00\n",
+      "21        30      1599.00\n",
+      "22        14      1582.00\n",
+      "23        15      1541.50\n",
+      "24        22      1475.00\n",
+      "25        31      1349.00\n",
+      "26        28      1199.00\n",
+      "27        16      1186.50\n",
+      "28         3      1127.50\n",
+      "29        11      1096.50\n",
+      "30        29      1047.00\n",
+      "31        17       951.00\n",
+      "32        26       900.00\n",
+      "33        48       880.00\n",
+      "34        18       831.00\n",
+      "35        10       751.00\n",
+      "36         6       750.00\n",
+      "37        27       750.00\n",
+      "38         9       654.00\n",
+      "39        53       600.00\n",
+      "40        25       599.00\n",
+      "41        12       556.00\n",
+      "42         8       462.00\n",
+      "43        33       415.50\n",
+      "44        13       415.50\n",
+      "45         5       405.00\n",
+      "46        39       329.00\n",
+      "47        50       305.78\n",
+      "48        40       141.00\n",
+      "49        49        75.29 50\n",
+      "   order_id  price_total\n",
+      "0        34         66.0\n",
+      "1        51         60.0\n",
+      "2        35         47.0\n",
+      "3        37         25.0\n",
+      "4        42         14.0\n",
+      "5        43         12.5 50\n"
+     ]
+    }
+   ],
    "source": [
     "# Read data from PostgreSQL database table and load into a DataFrame in MySQL\n",
     "\n",
     "ps.set_option('display.expand_frame_repr', False)\n",
-    "for i in  ps.read_sql(query, dbConnection,chunksize=10):\n",
+    "chunksize=50\n",
+    "for i in  ps.read_sql(query, dbConnection,chunksize=chunksize):\n",
     "    #insert into from Potstgres to Myqsql\n",
     "    i.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
-    "    print(i)\n",
+    "    print(i,chunksize)\n",
     "#dbConnection.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>price_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>43</td>\n",
+       "      <td>12.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  price_total\n",
+       "0        34         66.0\n",
+       "1        51         60.0\n",
+       "2        35         47.0\n",
+       "3        37         25.0\n",
+       "4        42         14.0\n",
+       "5        43         12.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>price_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55</td>\n",
+       "      <td>74458.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>54</td>\n",
+       "      <td>28088.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44</td>\n",
+       "      <td>17550.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46</td>\n",
+       "      <td>12250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>9555.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>51</td>\n",
+       "      <td>60.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>35</td>\n",
+       "      <td>47.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>37</td>\n",
+       "      <td>25.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>42</td>\n",
+       "      <td>14.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>503</th>\n",
+       "      <td>43</td>\n",
+       "      <td>12.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>504 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     order_id  price_total\n",
+       "0          55     74458.18\n",
+       "1          54     28088.23\n",
+       "2          44     17550.00\n",
+       "3          46     12250.00\n",
+       "4          56      9555.65\n",
+       "..        ...          ...\n",
+       "499        51        60.00\n",
+       "500        35        47.00\n",
+       "501        37        25.00\n",
+       "502        42        14.00\n",
+       "503        43        12.50\n",
+       "\n",
+       "[504 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "queryMysql='''select * from sale_order_line'''\n",
     "dfMysql=ps.read_sql(queryMysql,connMysql)\n",
