--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -148,10 +148,11 @@
    ],
    "source": [
     "# Read data from PostgreSQL database table and load into a DataFrame in MySQL\n",
-    "\n",
-    "ps.set_option('display.expand_frame_repr', False)\n",
     "chunksize=50\n",
-    "for i in  ps.read_sql(query, dbConnection,chunksize=chunksize):\n",
+    "df=ps.read_sql(query, dbConnection,chunksize=chunksize)\n",
+    "ps.set_option('display.expand_frame_repr', False)\n",
+    "\n",
+    "for i in  df :\n",
     "    #insert into from Potstgres to Myqsql\n",
     "    i.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
     "    print(i,chunksize)\n",
