--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -149,13 +149,13 @@
    "source": [
     "# Read data from PostgreSQL database table and load into a DataFrame in MySQL\n",
     "chunksize=50\n",
-    "df=ps.read_sql(query, dbConnection,chunksize=chunksize)\n",
+    "df_reader=ps.read_sql(query, dbConnection,chunksize=chunksize)\n",
     "ps.set_option('display.expand_frame_repr', False)\n",
     "\n",
-    "for i in  df :\n",
+    "for df in  df_reader :\n",
     "    #insert into from Potstgres to Myqsql\n",
-    "    i.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
-    "    print(i,chunksize)\n",
+    "    df.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
+    "    print(df,chunksize)\n",
     "#dbConnection.close()\n"
    ]
   },
@@ -240,120 +240,24 @@
     }
    ],
    "source": [
-    "i"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>price_total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>55</td>\n",
-       "      <td>74458.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>54</td>\n",
-       "      <td>28088.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>44</td>\n",
-       "      <td>17550.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>46</td>\n",
-       "      <td>12250.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>56</td>\n",
-       "      <td>9555.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>51</td>\n",
-       "      <td>60.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>35</td>\n",
-       "      <td>47.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>37</td>\n",
-       "      <td>25.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>42</td>\n",
-       "      <td>14.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>43</td>\n",
-       "      <td>12.50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>504 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     order_id  price_total\n",
-       "0          55     74458.18\n",
-       "1          54     28088.23\n",
-       "2          44     17550.00\n",
-       "3          46     12250.00\n",
-       "4          56      9555.65\n",
-       "..        ...          ...\n",
-       "499        51        60.00\n",
-       "500        35        47.00\n",
-       "501        37        25.00\n",
-       "502        42        14.00\n",
-       "503        43        12.50\n",
-       "\n",
-       "[504 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m queryMysql\u001b[39m=\u001b[39m\u001b[39m'''\u001b[39m\u001b[39mselect * from sale_order_line\u001b[39m\u001b[39m'''\u001b[39m\n\u001b[1;32m----> 2\u001b[0m dfMysql\u001b[39m=\u001b[39mps\u001b[39m.\u001b[39mread_sql(queryMysql,connMysql)\n\u001b[0;32m      3\u001b[0m dfMysql\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ps' is not defined"
+     ]
     }
    ],
    "source": [
@@ -365,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,16 +278,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: DATABASE_URL='mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')\n"
+     ]
+    }
+   ],
    "source": [
     "%env  DATABASE_URL = 'mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,22 +305,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost/mydbtest\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>order_id</th>\n",
+       "            <th>price_total</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n",
-    "delete from sale_order_line;"
+    "%%sql  \n",
+    "select * from sale_order_line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost/mydbtest\n",
+      "728 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql  \n",
-    "select * from sale_order_line"
+    "%%sql\n",
+    "delete from sale_order_line;"
    ]
   }
  ],
