--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -5,13 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#!pip install ipython-sql\n",
-    "#!pip install py-postgresql\n",
-    "#!pip install psycopg2-binary\n",
-    "#!pip install sqlalchemy\n",
-    "#!pip3 install sqlalchemy\n",
-    "#!pip3 install flask-sqlalchemy --user\n",
-    "\n"
+    "!pip install Lib.txt"
    ]
   },
   {
@@ -24,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connMysql='mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')\n"
+    "connMysql='mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -105,63 +99,64 @@
       "16        36      1799.00\n",
       "17        32      1799.00\n",
       "18        19      1740.00\n",
-      "19         1      1740.00\n",
-      "20         7      1706.00\n",
-      "21        30      1599.00\n",
-      "22        14      1582.00\n",
-      "23        15      1541.50\n",
-      "24        22      1475.00\n",
-      "25        31      1349.00\n",
-      "26        28      1199.00\n",
-      "27        16      1186.50\n",
-      "28         3      1127.50\n",
-      "29        11      1096.50\n",
-      "30        29      1047.00\n",
-      "31        17       951.00\n",
-      "32        26       900.00\n",
-      "33        48       880.00\n",
-      "34        18       831.00\n",
-      "35        10       751.00\n",
-      "36         6       750.00\n",
-      "37        27       750.00\n",
-      "38         9       654.00\n",
-      "39        53       600.00\n",
-      "40        25       599.00\n",
-      "41        12       556.00\n",
-      "42         8       462.00\n",
-      "43        33       415.50\n",
-      "44        13       415.50\n",
-      "45         5       405.00\n",
-      "46        39       329.00\n",
-      "47        50       305.78\n",
-      "48        40       141.00\n",
-      "49        49        75.29 50\n",
-      "   order_id  price_total\n",
-      "0        34         66.0\n",
-      "1        51         60.0\n",
-      "2        35         47.0\n",
-      "3        37         25.0\n",
-      "4        42         14.0\n",
-      "5        43         12.5 50\n"
+      "19         1      1740.00 (20, 2)\n",
+      "    order_id  price_total\n",
+      "0          7       1706.0\n",
+      "1         30       1599.0\n",
+      "2         14       1582.0\n",
+      "3         15       1541.5\n",
+      "4         22       1475.0\n",
+      "5         31       1349.0\n",
+      "6         28       1199.0\n",
+      "7         16       1186.5\n",
+      "8          3       1127.5\n",
+      "9         11       1096.5\n",
+      "10        29       1047.0\n",
+      "11        17        951.0\n",
+      "12        26        900.0\n",
+      "13        48        880.0\n",
+      "14        18        831.0\n",
+      "15        10        751.0\n",
+      "16         6        750.0\n",
+      "17        27        750.0\n",
+      "18         9        654.0\n",
+      "19        53        600.0 (20, 2)\n",
+      "    order_id  price_total\n",
+      "0         25       599.00\n",
+      "1         12       556.00\n",
+      "2          8       462.00\n",
+      "3         33       415.50\n",
+      "4         13       415.50\n",
+      "5          5       405.00\n",
+      "6         39       329.00\n",
+      "7         50       305.78\n",
+      "8         40       141.00\n",
+      "9         49        75.29\n",
+      "10        34        66.00\n",
+      "11        51        60.00\n",
+      "12        35        47.00\n",
+      "13        37        25.00\n",
+      "14        42        14.00\n",
+      "15        43        12.50 (16, 2)\n"
      ]
     }
    ],
    "source": [
     "# Read data from PostgreSQL database table and load into a DataFrame in MySQL\n",
-    "chunksize=50\n",
+    "chunksize=20\n",
     "df_reader=ps.read_sql(query, dbConnection,chunksize=chunksize)\n",
     "ps.set_option('display.expand_frame_repr', False)\n",
     "\n",
     "for df in  df_reader :\n",
     "    #insert into from Potstgres to Myqsql\n",
     "    df.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
-    "    print(df,chunksize)\n",
-    "#dbConnection.close()\n"
+    "    print(df,df.shape)\n",
+    "#dbConnection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -192,72 +187,84 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>34</td>\n",
-       "      <td>66.0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>74458.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>51</td>\n",
-       "      <td>60.0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>28088.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>35</td>\n",
-       "      <td>47.0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>17550.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>37</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>12250.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>42</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>9555.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>51</td>\n",
+       "      <td>60.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>35</td>\n",
+       "      <td>47.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>37</td>\n",
+       "      <td>25.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>42</td>\n",
+       "      <td>14.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
        "      <td>43</td>\n",
-       "      <td>12.5</td>\n",
+       "      <td>12.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>112 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   order_id  price_total\n",
-       "0        34         66.0\n",
-       "1        51         60.0\n",
-       "2        35         47.0\n",
-       "3        37         25.0\n",
-       "4        42         14.0\n",
-       "5        43         12.5"
+       "     order_id  price_total\n",
+       "0          55     74458.18\n",
+       "1          54     28088.23\n",
+       "2          44     17550.00\n",
+       "3          46     12250.00\n",
+       "4          56      9555.65\n",
+       "..        ...          ...\n",
+       "107        51        60.00\n",
+       "108        35        47.00\n",
+       "109        37        25.00\n",
+       "110        42        14.00\n",
+       "111        43        12.50\n",
+       "\n",
+       "[112 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ps' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m queryMysql\u001b[39m=\u001b[39m\u001b[39m'''\u001b[39m\u001b[39mselect * from sale_order_line\u001b[39m\u001b[39m'''\u001b[39m\n\u001b[1;32m----> 2\u001b[0m dfMysql\u001b[39m=\u001b[39mps\u001b[39m.\u001b[39mread_sql(queryMysql,connMysql)\n\u001b[0;32m      3\u001b[0m dfMysql\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ps' is not defined"
-     ]
     }
    ],
    "source": [
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,24 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: DATABASE_URL='mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env  DATABASE_URL = 'mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,40 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * mysql://root:***@localhost/mydbtest\n",
-      "0 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>order_id</th>\n",
-       "            <th>price_total</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql  \n",
     "select * from sale_order_line"
@@ -346,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +322,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@localhost/mydbtest\n",
-      "728 rows affected.\n"
+      "112 rows affected.\n"
      ]
     },
     {
@@ -363,7 +331,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
