--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -9,6 +9,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2 \n",
+    "import pandas as ps\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import URL\n",
+    "import multiprocessing as mult"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -22,13 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2 \n",
-    "import pandas as ps\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy import URL\n",
-    "\n",
     "url_object = URL.create(\n",
-    "    \n",
     "    \"postgresql+psycopg2\",\n",
     "    username=\"postgres\",\n",
     "    password=\"openpgpwd\",  # plain (unescaped) text\n",
@@ -50,7 +57,16 @@
     "        group by order_id\n",
     "        order by sum(price_total)  desc\n",
     "        ;'''\n",
-    "df=ps.read_sql(query,dbConnection)\n"
+    "df=ps.read_sql(query,dbConnection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(df.to_sql)"
    ]
   },
   {
@@ -72,7 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool=mult.Pool(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -149,14 +181,14 @@
     "\n",
     "for df in  df_reader :\n",
     "    #insert into from Potstgres to Myqsql\n",
-    "    df.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
-    "    print(df,df.shape)\n",
+    "   df.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
+    "   print(df,df.shape)\n",
     "#dbConnection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -211,58 +243,325 @@
        "      <td>9555.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>45</td>\n",
+       "      <td>7752.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
+       "      <th>6</th>\n",
+       "      <td>23</td>\n",
+       "      <td>4350.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>41</td>\n",
+       "      <td>3645.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>38</td>\n",
+       "      <td>3598.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2947.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2947.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2240.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2175.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>47</td>\n",
+       "      <td>2075.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>52</td>\n",
+       "      <td>2064.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1990.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>36</td>\n",
+       "      <td>1799.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1799.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1740.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1740.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1706.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>30</td>\n",
+       "      <td>1599.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1582.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1541.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1475.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>31</td>\n",
+       "      <td>1349.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1199.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1186.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1127.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1096.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>29</td>\n",
+       "      <td>1047.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>17</td>\n",
+       "      <td>951.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>26</td>\n",
+       "      <td>900.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>48</td>\n",
+       "      <td>880.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>18</td>\n",
+       "      <td>831.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>10</td>\n",
+       "      <td>751.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>6</td>\n",
+       "      <td>750.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>27</td>\n",
+       "      <td>750.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>9</td>\n",
+       "      <td>654.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>53</td>\n",
+       "      <td>600.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>25</td>\n",
+       "      <td>599.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>12</td>\n",
+       "      <td>556.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>8</td>\n",
+       "      <td>462.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>33</td>\n",
+       "      <td>415.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>13</td>\n",
+       "      <td>415.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>5</td>\n",
+       "      <td>405.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>39</td>\n",
+       "      <td>329.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>50</td>\n",
+       "      <td>305.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>40</td>\n",
+       "      <td>141.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>49</td>\n",
+       "      <td>75.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>34</td>\n",
+       "      <td>66.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
        "      <td>51</td>\n",
        "      <td>60.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108</th>\n",
+       "      <th>52</th>\n",
        "      <td>35</td>\n",
        "      <td>47.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
+       "      <th>53</th>\n",
        "      <td>37</td>\n",
        "      <td>25.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>110</th>\n",
+       "      <th>54</th>\n",
        "      <td>42</td>\n",
        "      <td>14.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111</th>\n",
+       "      <th>55</th>\n",
        "      <td>43</td>\n",
        "      <td>12.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>112 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     order_id  price_total\n",
-       "0          55     74458.18\n",
-       "1          54     28088.23\n",
-       "2          44     17550.00\n",
-       "3          46     12250.00\n",
-       "4          56      9555.65\n",
-       "..        ...          ...\n",
-       "107        51        60.00\n",
-       "108        35        47.00\n",
-       "109        37        25.00\n",
-       "110        42        14.00\n",
-       "111        43        12.50\n",
-       "\n",
-       "[112 rows x 2 columns]"
+       "    order_id  price_total\n",
+       "0         55     74458.18\n",
+       "1         54     28088.23\n",
+       "2         44     17550.00\n",
+       "3         46     12250.00\n",
+       "4         56      9555.65\n",
+       "5         45      7752.00\n",
+       "6         23      4350.00\n",
+       "7         41      3645.00\n",
+       "8         38      3598.00\n",
+       "9          2      2947.50\n",
+       "10        20      2947.50\n",
+       "11         4      2240.00\n",
+       "12        21      2175.00\n",
+       "13        47      2075.00\n",
+       "14        52      2064.00\n",
+       "15        24      1990.00\n",
+       "16        36      1799.00\n",
+       "17        32      1799.00\n",
+       "18        19      1740.00\n",
+       "19         1      1740.00\n",
+       "20         7      1706.00\n",
+       "21        30      1599.00\n",
+       "22        14      1582.00\n",
+       "23        15      1541.50\n",
+       "24        22      1475.00\n",
+       "25        31      1349.00\n",
+       "26        28      1199.00\n",
+       "27        16      1186.50\n",
+       "28         3      1127.50\n",
+       "29        11      1096.50\n",
+       "30        29      1047.00\n",
+       "31        17       951.00\n",
+       "32        26       900.00\n",
+       "33        48       880.00\n",
+       "34        18       831.00\n",
+       "35        10       751.00\n",
+       "36         6       750.00\n",
+       "37        27       750.00\n",
+       "38         9       654.00\n",
+       "39        53       600.00\n",
+       "40        25       599.00\n",
+       "41        12       556.00\n",
+       "42         8       462.00\n",
+       "43        33       415.50\n",
+       "44        13       415.50\n",
+       "45         5       405.00\n",
+       "46        39       329.00\n",
+       "47        50       305.78\n",
+       "48        40       141.00\n",
+       "49        49        75.29\n",
+       "50        34        66.00\n",
+       "51        51        60.00\n",
+       "52        35        47.00\n",
+       "53        37        25.00\n",
+       "54        42        14.00\n",
+       "55        43        12.50"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,17 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql  \n",
-    "select * from sale_order_line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +611,48 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@localhost/mydbtest\n",
-      "112 rows affected.\n"
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>order_id</th>\n",
+       "            <th>price_total</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql  \n",
+    "select * from sale_order_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost/mydbtest\n",
+      "16 rows affected.\n"
      ]
     },
     {
@@ -331,7 +661,7 @@
        "[]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
