--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -92,15 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool=mult.Pool(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Read data from PostgreSQL database table and load into a DataFrame in MySQL\n",
     "chunksize=20\n",
     "df_reader=ps.read_sql(query, dbConnection,chunksize=chunksize)\n",
@@ -108,7 +99,7 @@
     "\n",
     "for df in  df_reader :\n",
     "    #insert into from Potstgres to Myqsql\n",
-    "   df.to_sql('sale_order_line',connMysql,if_exists='append',index=False)\n",
+    "   df.to_sql('sale_order_line',connMysql,if_exists='append',index=False,method='multi')\n",
     "   print(df,df.shape)\n",
     "#dbConnection.close()"
    ]
