--- a/DaskLib.ipynb
+++ b/DaskLib.ipynb
@@ -5,7 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip install pyspark"
+    "!pip install \"dask[complete]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask.dataframe as dd\n",
+    "from pyspark.sql import SparkSession  \n",
+    "import pandas as pd\n",
+    "import glob as gl"
    ]
   },
   {
@@ -13,19 +25,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip install \"dask[complete]\""
+    "!git clone http://github.com/dgadiraju/data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask as ds\n",
-    "import pyspark as ps\n",
-    "import pandas as pd\n",
-    "import glob as gl"
+    "files=gl.glob('data\\\\nyse_all\\\\nyse_data\\\\*')\n",
+    "countRow=0\n",
+    "for file in files :\n",
+    "    print(file)\n",
+    "    df=pd.read_csv(file)\n",
+    "df.shape[0]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dfs=dd.read_csv('data\\\\nyse_all\\\\nyse_data\\\\*.txt.gz', blocksize=None)\n",
+    "dfs.shape[0].compute()\n",
+    "dfs"
    ]
   },
   {
@@ -34,100 +61,52 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'data'...\n",
-      "warning: redirecting to https://github.com/dgadiraju/data/\n",
-      "Updating files:  62% (49/78)\n",
-      "Updating files:  64% (50/78)\n",
-      "Updating files:  65% (51/78)\n",
-      "Updating files:  66% (52/78)\n",
-      "Updating files:  67% (53/78)\n",
-      "Updating files:  69% (54/78)\n",
-      "Updating files:  70% (55/78)\n",
-      "Updating files:  71% (56/78)\n",
-      "Updating files:  73% (57/78)\n",
-      "Updating files:  74% (58/78)\n",
-      "Updating files:  75% (59/78)\n",
-      "Updating files:  76% (60/78)\n",
-      "Updating files:  78% (61/78)\n",
-      "Updating files:  79% (62/78)\n",
-      "Updating files:  80% (63/78)\n",
-      "Updating files:  82% (64/78)\n",
-      "Updating files:  83% (65/78)\n",
-      "Updating files:  84% (66/78)\n",
-      "Updating files:  85% (67/78)\n",
-      "Updating files:  87% (68/78)\n",
-      "Updating files:  88% (69/78)\n",
-      "Updating files:  89% (70/78)\n",
-      "Updating files:  91% (71/78)\n",
-      "Updating files:  92% (72/78)\n",
-      "Updating files:  93% (73/78)\n",
-      "Updating files:  94% (74/78)\n",
-      "Updating files:  96% (75/78)\n",
-      "Updating files:  97% (76/78)\n",
-      "Updating files:  98% (77/78)\n",
-      "Updating files: 100% (78/78)\n",
-      "Updating files: 100% (78/78), done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git clone http://github.com/dgadiraju/data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data\\nyse_all\\nyse_data\\NYSE_1997.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_1998.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_1999.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2000.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2001.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2002.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2003.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2004.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2005.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2006.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2007.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2008.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2009.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2010.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2011.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2012.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2013.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2014.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2015.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2016.txt.gz\n",
-      "data\\nyse_all\\nyse_data\\NYSE_2017.txt.gz\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://PC:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.4.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>myspark</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
       "text/plain": [
-       "9384718"
+       "<pyspark.sql.session.SparkSession at 0x23368a84b80>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files=gl.glob('data\\\\nyse_all\\\\nyse_data\\\\*')\n",
-    "countRow=0\n",
-    "for file in files :\n",
-    "    print(file)\n",
-    "    df=pd.read_csv(file)\n",
-    "    countRow += df.shape[0]\n",
-    "countRow\n"
+    "spark=SparkSession.builder.appName(\"myspark\").master('local').getOrCreate()\n",
+    "spark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfp=spark.read.csv('data\\\\nyse_all\\\\nyse_data\\\\*.txt.gz')\n",
+    "dfp.count()"
    ]
   }
  ],
