--- a/Code/01-spark-sql-and-pyspark/itversity-material/01_getting_started_with_hadoop_and_spark/01_getting_started.ipynb
+++ b/Code/01-spark-sql-and-pyspark/itversity-material/01_getting_started_with_hadoop_and_spark/01_getting_started.ipynb
@@ -23,7 +23,7 @@
     "* Managing Spark Metastore Databases\n",
     "* Managing Spark Metastore Tables\n",
     "* Retrieve Metadata of Tables\n",
-    "* Role of Spark or Hive Metastore"
+    "* Role of Spark or Hive Metastore."
    ]
   }
  ],
