--- a/Code/01-spark-sql-and-pyspark/itversity-material/01_getting_started_with_hadoop_and_spark/09_retrieve_metadata_of_tables.ipynb
+++ b/Code/01-spark-sql-and-pyspark/itversity-material/01_getting_started_with_hadoop_and_spark/09_retrieve_metadata_of_tables.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,6 +11,13 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
