--- a/Code/pyspark/02_quick_recap_of_python/08_overview_of_collections.ipynb
+++ b/Code/pyspark/02_quick_recap_of_python/08_overview_of_collections.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,7 +38,7 @@
    "source": [
     "%%sh\n",
     "\n",
-    "ls -ltr /data/retail_db/orders/part-00000"
+    "ls -ltr F:\\30-Work\\DataEngineer\\Data\\db_data\\retail_db\\orders\\part-00000"
    ]
   },
   {
@@ -45,13 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_path = \"/data/retail_db/orders/part-00000\"\n",
+    "orders_path = \"F:\\\\30-Work\\\\DataEngineer\\Data\\\\db_data\\\\retail_db\\\\orders\\\\part-00000\"\n",
     "orders = open(orders_path). \\\n",
     "    read(). \\\n",
-    "    splitlines()"
+    "    splitlines()\n",
+    "orders"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,6 +72,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,6 +89,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,13 +119,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_items_path = \"/data/retail_db/order_items/part-00000\"\n",
+    "order_items_path = \"F:\\\\30-Work\\\\DataEngineer\\Data\\\\db_data\\\\retail_db\\\\orders\\\\part-00000\"\n",
     "order_items = open(order_items_path). \\\n",
     "    read(). \\\n",
     "    splitlines()"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_order_revenue(order_items, order_id):\n",
+    "    order_items_filtered = filter(lambda oi: \n",
+    "                                  int(oi.split(\",\")[1]) == order_id, \n",
+    "                                  order_items )\n",
+    "    order_items_map = map(lambda oi: \n",
+    "                          float(oi.split(\",\")[4]), \n",
+    "                          order_items_filtered)\n",
+    "    return round(sum(order_items_map), 2)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,14 +157,12 @@
    "source": [
     "def get_order_revenue(order_items, order_id):\n",
     "    order_items_filtered = filter(lambda oi: \n",
-    "                                  int(oi.split(\",\")[1]) == 2, \n",
-    "                                  order_items\n",
-    "                                 )\n",
+    "                                  int(oi.split(\",\")[1]) == order_id, \n",
+    "                                  order_items )\n",
     "    order_items_map = map(lambda oi: \n",
     "                          float(oi.split(\",\")[4]), \n",
-    "                          order_items_filtered\n",
-    "                         )\n",
-    "    return round(sum(order_items_map), 2)"
+    "                          order_items_filtered)\n",
+    "    return sum(order_items_map)"
    ]
   },
   {
@@ -169,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
